--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.7.7",
     "babel-eslint": "^10.1.0",
@@ -47,6 +48,7 @@
     "@babel/polyfill": "^7.7.0",
     "basiclightbox": "^5.0.3",
     "core-js": "3",
+    "history": "^5.0.0",
     "invert-color": "^2.0.0",
     "on-change": "^2.0.1"
   },
